manifests/glance/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  selector:
    app: glance
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
