manifests/glance/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - glance
  rules:
    - host: glance
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 8080
